# dexterous_developer

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dexterous.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  RELEASES.md  book.toml  build.rs  clippy.sh  liblauncher.d  nextest.sh  release-plz.toml  test.sh
adapters/bevy_dexterous_developer/: Cargo.toml
adapters/bevy_dexterous_developer/examples/: binary_cli.rs  binary_visual.rs  events_end.rs  events_start.rs  launcher.rs  replacable_component_end.rs  replacable_component_start.rs  replacable_computed_state_end.rs  replacable_computed_state_start.rs  replacable_resource_end.rs  replacable_resource_start.rs  replacable_state_end.rs  replacable_state_start.rs  replacable_sub_state_end.rs  replacable_sub_state_start.rs  reset_component.rs  reset_resource_end.rs  reset_resource_start.rs  reset_resource_to_value.rs  serde_serializable_component_end.rs  serde_serializable_component_start.rs  serde_serializable_resource_end.rs  serde_serializable_resource_start.rs  simple_cli.rs  simple_cli_loaded_test.rs  simple_system_swap.rs  simple_visual.rs  state_scoped_end.rs  state_scoped_start.rs
adapters/bevy_dexterous_developer/src/: lib.rs
adapters/bevy_dexterous_developer/tests/: component.rs  events.rs  resources.rs  simple_cli_test.rs  states.rs
adapters/bevy_examples/: Cargo.toml
adapters/bevy_examples/examples/: replacable_component_end.rs  replacable_computed_state_end.rs  replacable_computed_state_start.rs  replacable_resource_end.rs  replacable_state_end.rs  replacable_state_start.rs  reset_component.rs  reset_resource_start.rs  reset_resource_to_value.rs  serde_serializable_component_end.rs  simple_cli.rs  simple_system_swap.rs  simple_visual.rs  state_scoped_end.rs
adapters/dioxus_dexterous_developer/: Cargo.toml
adapters/dioxus_dexterous_developer/examples/: dioxus-desktop.rs
adapters/dioxus_dexterous_developer/src/: lib.rs
adapters/untethered_dexterous_developer/: Cargo.toml
adapters/untethered_dexterous_developer/src/: lib.rs
adapters/xilem_dexterous_developer/: Cargo.toml
adapters/xilem_dexterous_developer/examples/: todo.rs
adapters/xilem_dexterous_developer/src/: lib.rs
bevy_dexterous_developer/: CHANGELOG.md  Cargo.toml
bevy_dexterous_developer/crates/bevy_dexterous_developer_dynamic/: Cargo.toml
bevy_dexterous_developer/crates/bevy_dexterous_developer_library/: Cargo.toml
bevy_dexterous_developer/src/: cold.rs  lib.rs  macros.rs  types.rs
bevy_dexterous_developer/src/hot/: mod.rs  reload_systems.rs  reloadable_app.rs  watch.rs
bevy_dexterous_developer/src/hot_internal/: hot_reload_internal.rs  mod.rs  reload_systems.rs  reloadable_app.rs  replacable_types.rs  schedules.rs
bevy_dexterous_developer_example/: Cargo.toml
bevy_dexterous_developer_example/src/: lib.rs  main.rs
bevy_hot_winit/: Cargo.toml
bevy_hot_winit/src/: lib.rs
dexerous_developer_manager_server/: Cargo.toml
dexterous_developer/: CHANGELOG.md  Cargo.toml
dexterous_developer/src/: lib.rs  logger.rs  types.rs
dexterous_developer/src/bevy_support/: cold.rs  mod.rs  types.rs
dexterous_developer/src/cold/: mod.rs
dexterous_developer/src/hot/: command.rs  library_holder.rs  mod.rs  reload_systems.rs  reloadable_app.rs  watch.rs
dexterous_developer/src/hot_internal/: hot_reload_internal.rs  mod.rs  reload_systems.rs  reloadable_app.rs  reloadable_app_setup.rs  schedules.rs  watch.rs
dexterous_developer/src/internal_shared/: cargo_path_utils.rs  lib_path_set.rs  library_holder.rs  mod.rs  update_lib.rs
dexterous_developer_builder/: CHANGELOG.md  Cargo.toml
dexterous_developer_builder/src/: build_settings.rs  command.rs  commands.rs  env.rs  incremental_builder.rs  incremental_linker.rs  lib.rs  simple_builder.rs  simple_watcher.rs  singleton.rs  types.rs  zig_downloader.rs
dexterous_developer_builder/src/default_builder/: builder.rs  mod.rs  rustc.rs
dexterous_developer_builder/src/incremental_builder/: builder.rs  cc.rs  dll_tool.rs  linker.rs  mod.rs  rustc.rs  zig.rs  zig_downloader.rs
dexterous_developer_cli/: CHANGELOG.md  Cargo.toml
dexterous_developer_cli/src/: config.rs  cross.rs  existing.rs  generate_temporary_lib.rs  incremental_c_compiler.rs  incremental_dlltool.rs  incremental_linker.rs  incremental_rustc.rs  lib.rs  main.rs  paths.rs  remote.rs  runner.rs  serve.rs  temporary_manifest.rs
dexterous_developer_coop/: Cargo.toml
dexterous_developer_coop/src/: lib.rs  types.rs
dexterous_developer_coop/src/app/: mod.rs  (+2 more)
dexterous_developer_dylib_runner/: CHANGELOG.md  Cargo.toml
dexterous_developer_dylib_runner/src/: dylib_runner_message.rs  error.rs  ffi.rs  lib.rs  library_holder.rs  remote_connection.rs  runner.rs  test_util.rs
dexterous_developer_dynamic/: CHANGELOG.md  Cargo.toml  Readme.md
dexterous_developer_dynamic/src/: lib.rs
dexterous_developer_example/: CHANGELOG.md  Cargo.toml  Cargo.toml.tmp
dexterous_developer_example/src/: lib.rs  main.rs
dexterous_developer_instance/: CHANGELOG.md  Cargo.toml
dexterous_developer_instance/src/: lib.rs  library_holder.rs
dexterous_developer_internal/: CHANGELOG.md  Cargo.toml
dexterous_developer_internal/src/: lib.rs  library_holder.rs  logger.rs  types.rs
dexterous_developer_macros/: CHANGELOG.md  Cargo.toml
dexterous_developer_macros/src/: lib.rs
dexterous_developer_manager/: CHANGELOG.md  Cargo.toml
dexterous_developer_manager/src/: lib.rs  manager.rs  server.rs  test_utils.rs
dexterous_developer_std_wrapper/: Cargo.toml
dexterous_developer_std_wrapper/src/: lib.rs
dexterous_developer_test_utils/: CHANGELOG.md  Cargo.toml
dexterous_developer_test_utils/src/: builder.rs  lib.rs
dexterous_developer_types/: CHANGELOG.md  Cargo.toml
dexterous_developer_types/src/: cargo_path_utils.rs  config.rs  lib.rs
hot-reload/: Cargo.toml
hot-reload/src/: lib.rs
hot_reload_example/: Cargo.toml
hot_reload_example/src/: lib.rs  main.rs
reload-macros/: Cargo.toml
reload-macros/src/: lib.rs
testing/dexterous_developer_tests/: CHANGELOG.md  Cargo.toml
(+208 files in other folders)
