[workspace]
resolver = "2"
members = [
    "dexterous_developer",
    "dexterous_developer_cli",
    "dexterous_developer_internal",
    "dexterous_developer_dynamic",
    "bevy_dexterous_developer",
    "dexterous_developer_example",
    "dexterous_developer_builder",
    "dexterous_developer_types",
    "dexterous_developer_manager",
    "dexterous_developer_dylib_runner",
    "bevy_dexterous_developer/crates/bevy_dexterous_developer_dynamic",
    "bevy_dexterous_developer/crates/bevy_dexterous_developer_library",
]

[workspace.package]
version = "0.3.0-pre.1"
authors = ["Lee-Orr"]
description = "A modular hot reload system for rust"
license = "MIT OR Apache-2.0"
categories = ["game-development", "hot-reload", "ui"]
keywords = ["bevy"]
homepage = "https://lee-orr.github.io/dexterous_developer/"
repository = "https://github.com/lee-orr/dexterous_developer"
documentation = "https://lee-orr.github.io/dexterous_developer/"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
