[workspace]
resolver = "2"
members = [
    "dexterous_developer_types",
    "dexterous_developer_builder",
    "dexterous_developer_manager",
    "dexterous_developer_instance",
    "dexterous_developer_dylib_runner",
    "dexterous_developer_cli",
    "dexterous_developer_test_utils",
    "adapters/*/crates/*",
    "adapters/*",
    "dexterous_developer",
    "dexterous_developer_dynamic",]

[workspace.package]
version = "0.3.0-pre.2"
authors = ["Lee-Orr"]
description = "A modular hot reload system for rust"
license = "MIT OR Apache-2.0"
categories = ["development-tools::build-utils", "development-tools", "game-development"]
keywords = ["bevy"]
homepage = "https://lee-orr.github.io/dexterous_developer/"
repository = "https://github.com/lee-orr/dexterous_developer"
documentation = "https://lee-orr.github.io/dexterous_developer/"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
