[package]
name = "bevy_dexterous_developer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
hot = ["dexterous_developer_macros/hot"]


[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "serialize",
] }
libloading = "0.8"
dexterous_developer_macros = { path = "../dexterous_developer_macros" }
crossbeam = "0.8"
tempfile = "3"
uuid = "1"
dexterous_developer_bevy_winit = { path = "../dexterous_developer_bevy_winit" }
serde = "1"
rmp-serde = "1"
