[package]
name = "bevy_dexterous_developer"
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
hot = [
    "bevy_dexterous_developer_library/hot"
]
hot_internal = [
    "bevy_dexterous_developer_library/hot_internal",
    "dep:bevy_dexterous_developer_dynamic"
]


[dependencies]
bevy_dexterous_developer_library = { version = "0.2.0", path = "crates/bevy_dexterous_developer_library" }
bevy_dexterous_developer_dynamic = { version = "0.2.0", path = "crates/bevy_dexterous_developer_dynamic", optional = true }