[package]
name = "bevy_dexterous_developer_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib_bevy_dexterous_developer_example"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]

bevy = { version = "0.11" }
bevy-inspector-egui = "*"
bevy_dexterous_developer = { path = "../bevy_dexterous_developer", features = [
    "hot",
] }
serde = "*"
