[package]
name = "dexterous_developer"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["bevy"]
hot = ["dexterous_developer_internal/hot"]
hot_internal = [
    "dexterous_developer_internal/hot_internal",
    "dexterous_developer_dynamic",
]
bevy = ["dexterous_developer_internal/bevy"]
cli = ["dexterous_developer_internal/cli"]


[dependencies]
dexterous_developer_internal = { version = "0.0.12-pre.0", path = "../dexterous_developer_internal", default-features = false }
dexterous_developer_dynamic = { version = "0.0.12-pre.0", path = "../dexterous_developer_dynamic", optional = true }
