[package]
name = "dexterous_developer"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["bevy"]
hot = ["dexterous_developer_internal/hot",
    "bevy_dexterous_developer/hot"]
hot_internal = [
    "dexterous_developer_internal/hot_internal",
    "bevy_dexterous_developer/hot_internal"
]
bevy = ["dep:bevy_dexterous_developer"]


[dependencies]
dexterous_developer_internal = { version = "0.3.0-pre.1", path = "../dexterous_developer_internal", default-features = false }
bevy_dexterous_developer = { version = "0.3.0-pre.1", path = "../adapters/bevy_dexterous_developer", optional = true }
