[package]
name = "dexterous_developer_builder"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
anyhow = { version = "1" }
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
debounce = { version = "0.2" }
tracing = { version = "0.1" }
dexterous_developer_types = { version = "0.3.0-pre.1", path = "../dexterous_developer_types" }
cargo_metadata = { version = "0.18" }
tokio = { version = "1", features = ["full"]}
dashmap = { version = "6", features = ["serde"] }
camino = "1"
crossbeam = "0.8"
prefer-dynamic = "0"
blake3 = "1"
thiserror = "1"
goblin = "0.8"
home = "0.5.9"
futures-util = { version = "0.3", default-features = false,  features = [
    "sink",
    "std",
] }

[dev-dependencies]
test-temp-dir = { version = "0.2 "}