[package]
name = "dexterous_developer_builder"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
anyhow = { version = "1" }
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
debounce = { version = "0.2" }
tracing = { version = "0.1" }
dexterous_developer_types = { version = "0.4.0-alpha.3", path = "../dexterous_developer_types" }
cargo_metadata = { version = "0.18" }
tokio = { version = "1", features = ["full"]}
dashmap = { version = "6", features = ["serde"] }
camino = "1"
crossbeam = "0.8"
blake3 = "1"
thiserror = { workspace= true }
goblin = "0.8"
home = "0.5.9"
futures-util = { version = "0.3", default-features = false,  features = [
    "sink",
    "std",
] }
serde_json = "1"
which = "6"
debounced = "0.1"
tokio-stream = "0.1"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = [ "blocking", "charset", "http2", "macos-system-configuration", "rustls-tls" ] }
semver = "1"
tar = "0.4"
xz2 = "0.1"
zip = "2"
dircpy = "0.3"
dunce = "1"
cargo-zigbuild = "0.19"
cargo-options = "0.7"
clap = "4"

[dev-dependencies]
test-temp-dir = { version = "0.2"}
