[package]
name = "dexterous_developer_cli"
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
version.workspace = true
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
description = "A CLI for hot reloadable apps in bevy, using the dexterous_developer crate"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "dexterous_developer_cli"
path = "src/main.rs"

[dependencies]
dexterous_developer_internal = { path = "../dexterous_developer_internal", version = "0.1.0", default-features = false, features = [
    "hot",
    "cli",
] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
anyhow = "1"
url = { version = "2", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
crossbeam = "0.8"
blake3 = "1"
walkdir = "2"
notify = { version = "6", default-features = false, features = [
    "macos_kqueue",
] }
dunce = "1"
directories = "5"
semver = "1"
which = "5"
toml = "0.8"
cargo_metadata = { version = "0.18" }
