[package]
name = "dexterous_developer_cli"
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
version.workspace = true
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
description = "A CLI for hot reloadable Rust applications, using the dexterous_developer crate"

[[bin]]
name = "dexterous_developer_cli"
path = "src/main.rs"

[[bin]]
name = "dexterous_developer_runner"
path = "src/runner.rs"

[[bin]]
name = "dexterous_developer_incremental_linker"
path = "src/incremental_linker.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
    "async-await"
] }
dunce = "1"
camino = "1"
tracing = { version = "0.1" }
tracing-subscriber = {  version = "0.3", features = ["env-filter", "fmt"]}
thiserror = "1"

toml = "0.8"
cargo_toml = "0.20"
locate-cargo-manifest = "0.2"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
async-tempfile = "0.6"
anyhow = "1"
which = "6"

dexterous_developer_types = { version = "0.3.0", path = "../dexterous_developer_types", features = ["config"] }
dexterous_developer_builder = { version = "0.3.0", path = "../dexterous_developer_builder"}
dexterous_developer_manager = { version = "0.3.0", path = "../dexterous_developer_manager"}
dexterous_developer_dylib_runner = { version = "0.3.0", path = "../dexterous_developer_dylib_runner"}
