[package]
name = "dexterous_developer_coop"
version = "0.0.12-pre.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors = ["Lee-Orr"]
homepage = "https://lee-orr.github.io/dexterous_developer/"
repository = "https://github.com/lee-orr/dexterous_developer"
documentation = "https://lee-orr.github.io/dexterous_developer/"
description = "a hot-reload library for bevy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["full"]

full = [
    "coop",
    "app",
    "cli_coop",
    "winit_coop",
    "direct_memory",
    "memory_mapped_file",
]

coop = []
app = []
cli_coop = ["coop"]
winit_coop = ["coop"]
default_coop = ["coop"]

direct_memory = ["coop", "app"]
memory_mapped_file = []

[dependencies]
bevy = { version = "0.12", default-features = false, optional = true }
rkyv = { version = "0.7" }
rkyv_dyn = "0.7"
rkyv_typename = "0.7"
crossbeam = "0.8"
thiserror = "1"

[dev-dependencies]
bevy = { version = "0.12" }
