[package]
name = "dexterous_developer_dylib_runner"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
libloading = { version = "0.8" }
uuid = { version = "1", features = ["v4"] }
notify = { version = "6" }
debounce = { version = "0.2" }
which = { version = "6" }
tracing = { version = "0.1" }
tracing-subscriber = {  version = "0.3", features = ["env-filter", "fmt"]}
tokio = { version = "1", features = ["full"] }
blake3 = { version = "1" }
dunce = "1"
serde = { version = "1"}
rmp-serde = { version = "1" }
dexterous_developer_types = { version = "0.3.0-pre.2", path = "../dexterous_developer_types" }
dexterous_developer_instance = { version = "0.3.0-pre.2", path = "../dexterous_developer_instance", features = ["runner", "dylib"]}
reqwest = { version = "0.12", features = [] }
tokio-tungstenite = { version = "0.23", features =[ "native-tls"] }
url = "2"
futures-util = { version = "0.3", default-features = false,  features = [
    "sink",
    "std",
] }
camino = "1"
async-channel = "2"
crossbeam = "0.8"
once_cell = "1"
safer-ffi = "0.1"
dashmap = "6"
