[package]
name = "dexterous_developer_dynamic"
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[lib]
crate-type = ["dylib"]


[dependencies]
dexterous_developer_instance = { version = "0.3.0", path = "../dexterous_developer_instance", default-features = false }
