[dependencies]
serde = "*"

[dependencies.bevy]
version = "0.12"

[dependencies.dexterous_developer]
features = ["bevy"]
path = "../dexterous_developer"

[features]
orange = []

[lib]
crate-type = ["dylib", "rlib"]
name = "lib_dexterous_developer_example"
path = "src/lib.rs"

[package]
edition = "2021"
name = "dexterous_developer_example"
version = "0.1.0"

[package.metadata]
hot_reload_features = ["bevy/dynamic_linking", "bevy/embedded_watcher"]
