[package]
name = "dexterous_developer_example"
version = "0.1.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib_dexterous_developer_example"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
bevy = { version = "0.13" }
dexterous_developer = { path = "../dexterous_developer", features = ["bevy"]}
serde = "*"

[features]
orange = []

[package.metadata]
hot_reload_features = ["bevy/dynamic_linking", "bevy/embedded_watcher"]