[package]
name = "dexterous_developer_instance"
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
runner = [
    "dep:tracing-subscriber",
]
hot = [
    "dylib"
]
dylib = ["dep:libloading"]



[dependencies]
anyhow = { version = "1" }
libloading = { version = "0.8", optional = true }
tracing = { version = "0.1" }
tracing-subscriber = {  version = "0.3", optional = true, features = ["env-filter", "fmt"]}
dunce = "1"
serde = { version = "1"}
dexterous_developer_types = { version = "0.4.0-alpha.3", path = "../dexterous_developer_types" }
camino = "1"
thiserror = "1"
safer-ffi = "0.1"
once_cell = "1"
chrono = "0.4"
crossbeam = "0.8"
uuid = { version =  "1", features = ["v4"] }
dashmap = "6"
rmp-serde = "1"
