[package]
name = "dexterous_developer_internal"
version = "0.0.12-pre.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors = ["Lee-Orr"]
homepage = "https://lee-orr.github.io/dexterous_developer/"
repository = "https://github.com/lee-orr/dexterous_developer"
documentation = "https://lee-orr.github.io/dexterous_developer/"
description = "a hot-reload library for bevy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["bevy"]
hot = [
    "dep:libloading",
    "dep:uuid",
    "dep:cargo_metadata",
    "dep:notify",
    "dep:debounce",
    "dep:which",
    "dep:log",
    "dep:env_logger",
]
hot_internal = [
    "dexterous_developer_macros/hot_internal",
    "dep:libloading",
    "dep:uuid",
    "dep:chrono",
]
bevy = ["dep:bevy", "dep:serde", "dep:rmp-serde"]


bevy_winit = ["bevy", "bevy/bevy_winit"]
bevy_audio = ["bevy", "bevy/bevy_audio"]
bevy_gilrs = ["bevy", "bevy/bevy_gilrs"]
bevy_asset = ["bevy", "bevy/bevy_asset"]
bevy_scene = ["bevy", "bevy/bevy_scene"]
bevy_render = ["bevy", "bevy/bevy_render"]
bevy_core_pipeline = ["bevy", "bevy/bevy_core_pipeline"]
bevy_sprite = ["bevy", "bevy/bevy_sprite"]
bevy_text = ["bevy", "bevy/bevy_text"]
bevy_ui = ["bevy", "bevy/bevy_ui"]
bevy_pbr = ["bevy", "bevy/bevy_pbr"]
bevy_gltf = ["bevy", "bevy/bevy_gltf"]
bevy_animation = ["bevy", "bevy/bevy_animation"]
bevy_gizmos = ["bevy", "bevy/bevy_gizmos"]
bevy_multi-threaded = ["bevy", "bevy/multi-threaded"]

bevy_full = [
    "bevy",
    "bevy_winit",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_asset",
    "bevy_scene",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_animation",
    "bevy_gizmos",
    "bevy_multi-threaded",
]
cli = ["hot", "dep:tokio", "dep:serde", "blake3"]


[dependencies]
anyhow = { version = "1" }
dexterous_developer_macros = { path = "../dexterous_developer_macros", version = "0.0.12-pre.0" }
bevy = { version = "0.12", default-features = false, features = [
    "serialize",
], optional = true }
libloading = { version = "0.8", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
rmp-serde = { version = "1", optional = true }
cargo_metadata = { version = "0.18", optional = true }
notify = { version = "6", optional = true }
debounce = { version = "0.2", optional = true }
which = { version = "5", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
blake3 = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
dunce = "1"
