[package]
name = "dexterous_developer_internal"
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
hot = [
    "dep:libloading",
    "dep:uuid",
    "dep:cargo_metadata",
    "dep:notify",
    "dep:debounce",
    "dep:which",
    "dep:tracing-subscriber",
    "dep:dexterous_developer_builder"
]
hot_internal = [
    "dexterous_developer_macros/hot_internal",
    "dep:libloading",
    "dep:uuid",
    "dep:chrono",
]
cli = ["hot", "dep:tokio", "blake3"]


[dependencies]
anyhow = { version = "1" }
dexterous_developer_macros = { path = "../dexterous_developer_macros", version = "0.1.0" }
libloading = { version = "0.8", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
cargo_metadata = { version = "0.18", optional = true }
notify = { version = "6", optional = true }
debounce = { version = "0.2", optional = true }
which = { version = "6", optional = true }
tracing = { version = "0.1" }
tracing-subscriber = {  version = "0.3", optional = true, features = ["env-filter", "fmt"]}
tokio = { version = "1", features = ["full"], optional = true }
blake3 = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
dunce = "1"
serde = { version = "1"}
dexterous_developer_types = { version = "0.1.0", path = "../dexterous_developer_types" }
dexterous_developer_builder = { version = "0.1.0", path = "../dexterous_developer_builder", optional = true }
