[package]
name = "dexterous_developer_macros"
version = "0.0.5"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors = ["Lee-Orr"]
homepage = "https://lee-orr.github.io/dexterous_developer/"
repository = "https://github.com/lee-orr/dexterous_developer"
documentation = "https://lee-orr.github.io/dexterous_developer/"
description = "macros for hot reloading"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "derive", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
libloading = "0.8"
proc-macro-crate = "1.2"

[lib]
proc-macro = true

[features]
# Enables hot reload
hot = []
hot_internal = []
