[package]
name = "dexterous_developer_macros"
edition = "2021"
readme = "../README.md"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "derive", "full"] }
quote = "1.0"
proc-macro2 = { version = "1.0" }
libloading = "0.8"
proc-macro-crate = "2"

[lib]
proc-macro = true

[features]
hot_internal = []
