[package]
name = "dexterous_developer_manager"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[features]
server = []

[dependencies]
tracing = { version = "0.1" }
tracing-subscriber = {  version = "0.3", features = ["env-filter", "fmt"]}
tokio = { version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"]}
thiserror = "1"
dexterous_developer_types = { version = "0.2.0", path = "../dexterous_developer_types"}
dexterous_developer_builder = { version = "0.2.0", path = "../dexterous_developer_builder"}

axum = { version = "0.7", features = ["ws"], optional = true}
futures-util = { version = "0.3", default-features = false, optional = true, features = [
    "sink",
    "std",
] }
rmp-serde = { version = "1", optional = true }
blake3 = "1"
walkdir = "2"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower = "0.4"
dashmap = "5"