[package]
name = "dexterous_developer_manager"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[features]
test = []

[dependencies]
tracing = { version = "0.1" }
tracing-subscriber = {  version = "0.3", features = ["env-filter", "fmt"]}
tokio = { workspace= true, features = ["full"]}
serde = { workspace = true }
thiserror = { workspace= true }
dexterous_developer_types = { version = "0.4.0-alpha.3", path = "../dexterous_developer_types"}
dexterous_developer_builder = { version = "0.4.0-alpha.3", path = "../dexterous_developer_builder"}

axum = { version = "0.8", features = ["ws"] }
futures-util = { version = "0.3", default-features = false,  features = [
    "sink",
    "std",
] }
rmp-serde = { workspace = true }
blake3 = "1"
walkdir = "2"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = { version = "0.5", features = ["util"] }
dashmap = "6"
uuid = { version = "1.8", features = ["serde", "v4"] }
camino = "1"
anyhow = "1"
